--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -23,5 +23,5 @@ html {
 body {
 	box-sizing: border-box;
 	font-size: 1.6rem;
-	font-family: 'Open Sans', 'sans-serif';
+	font-family: 'Lato', 'sans-serif';
 }
