--- a/components/Skills/Skills.scss
+++ b/components/Skills/Skills.scss
@@ -1,4 +1,4 @@
-@import 'public/sass/shared';
+@import "public/sass/shared";
 
 .Skills {
 	margin: 20rem 0;
@@ -8,10 +8,13 @@
 			rgba($color-primary-light, 0.8),
 			rgba($color-primary-dark, 0.8)
 		),
-		url('/images/skills.jpg');
-	background-size: cover;
-	// margin-top: -11rem;
+		url("/images/skills.jpg");
 	transform: skewY(-7deg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 
 	// Select all child
 	& > * {
